[project]
name = ""
version = "0.0.1"
requires-python = "~=3.14"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "PyYAML",
    "jinja2",
    "retry",
]

[dependency-groups]
dev = [
    "flake8",
    "pylint",
    "pytest",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
